# embedded_atsamv71

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  make_script.sh  syscalls.c
